# ChangeLog for dev-ruby/terminal-table
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jun 2015; Hans de Graaff <graaff@gentoo.org> terminal-table-1.4.5.ebuild:
  Add ruby21, ruby22.

  09 Jan 2014; Hans de Graaff <graaff@gentoo.org> terminal-table-1.4.5.ebuild:
  Add ruby20.

  01 Jun 2013; Hans de Graaff <graaff@gentoo.org> terminal-table-1.4.5.ebuild:
  Actually make ebuild work.

*terminal-table-1.4.5 (01 Jun 2013)

  01 Jun 2013; Hans de Graaff <graaff@gentoo.org> +terminal-table-1.4.5.ebuild,
  +metadata.xml:
  Dependency for brakeman.
