@@ -1,1 +1,0 @@
-DIST astrolabe-1.3.0.gem 16384 SHA256 23f774f5fa164e293bbf3977e42fe0258f49f06a5fd62080fae27d7248fddea1 SHA512 8acc0cd432b2aadff81ae6599a26e1778680d7e8cdd9af0644156e08151e27eabaf6e8bc4afffa0e51930b477823fc6c903f4fe88029989f5096df265df8504e WHIRLPOOL c0a2a55ec4df6cd986e322a8b07dbf9aee629cfb09b991e6ec4f1c1cf342bda8877b7b49f3f1c5298a2707540606bbd9475f0a86675f8a72f8b5dc4840f767ed
