@@ -1,23 +1,0 @@
-# Copyright 1999-2015 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header:  $
-
-EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21 ruby22"
-
-RUBY_FAKEGEM_RECIPE_DOC="rdoc"
-RUBY_FAKEGEM_EXTRADOC="CHANGELOG.md README.md"
-
-RUBY_FAKEGEM_RECIPE_TEST="rspec3"
-
-inherit ruby-fakegem
-
-DESCRIPTION="An object-oriented AST extension for Parser"
-HOMEPAGE="https://github.com/yujinakayama/astrolabe"
-
-LICENSE="MIT"
-SLOT="1"
-KEYWORDS="~amd64"
-IUSE=""
-
-ruby_add_rdepend ">=dev-ruby/parser-2.2.0:0"
