@@ -1,1 +1,2 @@
 DIST terminal-table-1.4.5.gem 14336 SHA256 bf81561a406d3389fcd08fc44447fb980f2810d1aaf99b9e06fc1916c83d1999 SHA512 c5ed0c9d8058056d9b4da4cb6ccdc4854821585b1d5bee56e8bf8829e8cd9e6a97bb9da7314c1475c7b89a39dad60e9ad957d4659ba0b4f0f8197296dd612eb9 WHIRLPOOL cd598eac06f781d121e4bda5c172d996ee14f3b356c9482473bd5e4804ee173558170dcf1bf37287f1b7ab3f054bd7a255485ad9b9b2a7c82e68034cb5e382db
+DIST terminal-table-1.5.2.tar.gz 10934 SHA256 14ff47258ac1ab0d6d80a44df5cadb1424eda90432a9070dcce48ecfe92a7a82 SHA512 770bad294e6e4bcb4afd3d4735c456521ec28d84653b3f1753ec26b448c2179f5bbff9a5ecc05ebd15348224172d0650dedd324552b9b79c05c4d3295518610c WHIRLPOOL 71026ed63c3c5f8670c10765be9f5883ff2ede4fecda6643661f66a08fd3f2c14df57b1309575420697388777e127f043864c5b21d91b7f8ab853ad4822d7572
