@@ -1,16 +1,0 @@
-# ChangeLog for dev-ruby/astrolabe
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-  12 Jun 2015; Hans de Graaff <graaff@gentoo.org> astrolabe-1.3.0.ebuild:
-  Add ruby22.
-
-  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> astrolabe-1.3.0.ebuild:
-  Put astrolabe in the correct slot.
-
-*astrolabe-1.3.0 (10 Mar 2015)
-
-  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> +astrolabe-1.3.0.ebuild,
-  +metadata.xml:
-  Initial import.
-
