@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*terminal-table-1.5.2 (17 Jul 2015)
+
+  17 Jul 2015; Hans de Graaff <graaff@gentoo.org> +terminal-table-1.5.2.ebuild:
+  Version bump.
+
   03 Jun 2015; Hans de Graaff <graaff@gentoo.org> terminal-table-1.4.5.ebuild:
   Add ruby21, ruby22.
 
